--- a/front-end/package.json
+++ b/front-end/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
-    "react": "^18.2.0",
+    "icons": "^1.0.0",
+    "react": "^18.3.1",
     "react-datepicker": "^7.4.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1"
