--- a/front-end/package.json
+++ b/front-end/package.json
@@ -16,6 +16,7 @@
     "react-big-calendar": "^1.14.1",
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
+    "react-intl": "^6.7.0",
     "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
